# project3

./: .gitignore  README.md  check.sh  main.py  pyproject.toml
src/: .gitignore  Dockerfile  compose.yaml  main.py  pyproject.toml  test.sh
src/ui/: Api.jsx  App.jsx  film.html  film.jsx  main.jsx  package-lock.json  package.json  vite.config.js
